<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/back_to_home_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginBottom="64dp"
                    android:background="#FFC0ABF9"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:titleTextAppearance="@style/ToolbarTitleStyle"
                    tools:ignore="MissingConstraints,NotSibling" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="295dp"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/button"
                        android:layout_below="@+id/toolbar"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="64dp"
                        android:fontFamily="@font/gothampro_bold"
                        android:text="@string/p1"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        android:typeface="normal"
                        tools:ignore="TextSizeCheck" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="220dp"
                        android:layout_height="60dp"
                        android:layout_above="@+id/camera"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="80dp"
                        android:background="@drawable/myrect"
                        android:backgroundTint="#F78989"
                        android:elevation="8dp"
                        android:fontFamily="@font/gothampro_light"
                        android:stateListAnimator="@animator/button_state_animator"
                        android:text="@string/download_image"
                        android:textSize="16sp"
                        android:translationX="4dp"
                        android:translationZ="-4dp" />

                    <Button
                        android:id="@+id/camera"
                        android:layout_width="220dp"
                        android:layout_height="60dp"
                        android:layout_above="@+id/button3"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/myrect"
                        android:backgroundTint="#F78989"
                        android:elevation="8dp"
                        android:fontFamily="@font/gothampro_light"
                        android:stateListAnimator="@animator/button_state_animator"
                        android:text="@string/camera"
                        android:textSize="16sp"
                        android:translationX="4dp"
                        android:translationZ="-4dp" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="220dp"
                        android:layout_height="60dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="50dp"
                        android:background="@drawable/myrect"
                        android:backgroundTint="#F78989"
                        android:elevation="4dp"
                        android:fontFamily="@font/gothampro_light"
                        android:stateListAnimator="@animator/button_state_animator"
                        android:text="@string/create_new"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFC0ABF9"
        android:paddingTop="25dp"
        app:headerLayout="@layout/nav_header"
        app:itemIconSize="32dp"
        app:itemIconTint="@color/black"
        app:itemTextAppearance="@style/MenuStyle"
        app:itemTextColor="#000000"
        app:menu="@menu/menu"
        tools:ignore="VisualLintBounds" />
</androidx.drawerlayout.widget.DrawerLayout>