<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_barcode_scanner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFFFFF"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginBottom="32dp"
                    android:background="#FFC0ABF9"
                    app:layout_constraintBottom_toTopOf="@+id/barcode_scanner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:titleTextAppearance="@style/ToolbarTitleStyle"
                    tools:ignore="MissingConstraints,NotSibling" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <com.journeyapps.barcodescanner.BarcodeView
                        android:id="@+id/barcode_scanner"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_below="@+id/toolbar"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="32dp"
                        tools:ignore="MissingConstraints">

                    </com.journeyapps.barcodescanner.BarcodeView>

                    <Button
                        android:id="@+id/flashlight_button"
                        android:layout_width="237dp"
                        android:layout_height="50dp"
                        android:layout_below="@+id/barcode_scanner"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/myrect"
                        android:fontFamily="@font/gothampro_light"
                        android:gravity="center"
                        android:stateListAnimator="@animator/button_state_animator"
                        android:text="@string/turn_on_flash" />

                    <TextView
                        android:id="@+id/scan_result"
                        android:layout_width="377dp"
                        android:layout_height="173dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/gothampro_medium"
                        android:gravity="center"
                        android:lineSpacingExtra="8sp"
                        android:padding="16dp"
                        android:scrollbars="vertical"
                        android:text="@null"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        tools:ignore="SpeakableTextPresentCheck"
                        tools:text="@null" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="50dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/back_to_home_button"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginBottom="50dp"
                            android:layout_toStartOf="@+id/scan_again_button"
                            android:background="@drawable/myrect"
                            android:backgroundTint="#FFC0ABF9"
                            android:fontFamily="@font/gothampro_light"
                            android:gravity="center"
                            android:stateListAnimator="@animator/button_state_animator"
                            android:text="@string/back"
                            android:translationX="4dp"
                            android:translationZ="-4dp" />

                        <Button
                            android:id="@+id/scan_again_button"
                            android:layout_width="180dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="50dp"
                            android:background="@drawable/myrect"
                            android:backgroundTint="#FFC0ABF9"
                            android:fontFamily="@font/gothampro_light"
                            android:stateListAnimator="@animator/button_state_animator"
                            android:text="@string/scan_again"
                            android:translationX="4dp"
                            android:translationZ="-4dp" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFC0ABF9"
        android:paddingTop="25dp"
        app:headerLayout="@layout/nav_header"
        app:itemIconSize="32dp"
        app:itemIconTint="@color/black"
        app:itemTextAppearance="@style/MenuStyle"
        app:itemTextColor="#000000"
        app:menu="@menu/menu" />
</androidx.drawerlayout.widget.DrawerLayout>